# pd-shift

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-06-30-stats-peak-fire-time-design.md
pd_shift/: cli.py  client.py  console_io.py  display.py  htmltext.py  merge.py  parse.py  progress.py  settings.py  stats.py  timefmt.py
tests/: test_cli.py  test_client.py  test_display.py  test_htmltext.py  test_merge.py  test_parse.py  test_settings.py  test_stats.py  test_timefmt.py
