[project]
name = "pd-shift"
version = "0.1.0"
description = "PagerDuty shift helper for Percona DBAs"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.28",
    "questionary>=2.0",
    "rich>=14.0",
]

[project.scripts]
pd = "pd_shift.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pd_shift*"]
